syntax = "proto3";

package userGrpc;
option go_package = "handlers/userGrpc";

service User {
  rpc GetUserDetails (GetRequest) returns (UserDetails) {}
  rpc GetUserAddress (GetRequest) returns (Address) {}
}

message GetRequest {
  string id = 1;
}

message UserDetails {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  Address address = 4;
}

message Address {
  string street = 1;
  string city = 2;
  string postCode = 3;
  string country = 4;
}
